apps/base/actual-up/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actual-up
  labels:
    app.kubernetes.io/name: actual-up
    gateway.excloo.dev/private-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: actual-up
  namespace: actual-up
  labels:
    app.kubernetes.io/name: actual-up
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 3000
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: actual-up
  policyTypes:
    - Ingress
